--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Jekyll:iä käyttävä sivusto
 description: Tervetuloa sivustolle!
-theme: jekyll-theme-minima
+theme: jekyll-minima-theme
+
 github_username: idakkr
