--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Jekyll:iä käyttävä sivusto
-description: Tervetuloa sivustolle!
+title: WorkOutApp
+description: Welcome to track your workouts!
 theme: jekyll-minima-theme
 
 github_username: idakkr
