--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: WorkOutApp
 description: Welcome to track your workouts!
-theme: jekyll-minima-theme
+theme: minima
 
 github_username: idakkr
